<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="first_app">Spotify Streamer</string>
    <string name="second_app">Scores App</string>
    <string name="third_app">Library App</string>
    <string name="fourth_app">Build It Bigger</string>
    <string name="fifth_app">XYZ Reader</string>
    <string name="sixth_app">Capstone: My Own App</string>
</resources>
