<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/header"
        android:textColor="#616161"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:onClick="displayToastFirstProject"
        android:text="@string/first_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:onClick="displayToastSecondProject"
        android:text="@string/second_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:onClick="displayToastThirdProject"
        android:text="@string/third_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:onClick="displayToastFourthProject"
        android:text="@string/fourth_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:onClick="displayToastFifthProject"
        android:text="@string/fifth_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="24dp"
        android:background="#D32F2F"
        android:onClick="displayToastSixthProject"
        android:text="@string/sixth_app"
        android:textColor="#FFF" />
</LinearLayout>
